bo-api/build_log.txt
Starting a Gradle Daemon, 12 busy and 1 incompatible and 2 stopped Daemons could not be reused, use --status for details

> Task :compileJava FAILED
C:\Users\Administrator\.gemini\workspace\Bo\bo-api\src\main\java\com\lselectric\bo\BoApplication.java:52: error: reached end of file while parsing
    }
     ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 35s
1 actionable task: 1 executed
